--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + Tailwind + TS</title>
+
+    <title>Brian's Songs</title>
+
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Brian's Songs" />
+    <meta
+      property="og:description"
+      content="Songs and stories from the road — bluesy grit, southern rock swagger, and quiet moments in between."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://brians-songs.netlify.app" />
+    <meta
+      property="og:image"
+      content="https://brians-songs.netlify.app/og-cover.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Brian's Songs" />
+    <meta
+      name="twitter:description"
+      content="Songs and stories from the road — bluesy grit, southern rock swagger, and quiet moments in between."
+    />
+    <meta
+      name="twitter:image"
+      content="https://brians-songs.netlify.app/og-cover.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
