--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Brian's Songs</title>
+    <title>briTunes</title>
 
     <!-- Favicons -->
     <link rel="icon" href="/favicon.ico" sizes="any" />
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Brian's Songs" />
+    <meta property="og:title" content="briTunes" />
     <meta
       property="og:description"
       content="Songs and stories from the road — bluesy grit, southern rock swagger, and quiet moments in between."
